--- a/assets/documentary.css
+++ b/assets/documentary.css
@@ -1,10 +1,7 @@
-.markdown-body {
-  min-width: 200px;
-  max-width: 850px;
-  margin: 0 auto;
-  padding: 30px;
+h1 {
+  color: #f64d27 !important;
 }
 
-.markdown-body dl dd {
-  padding: 0;
+body {
+  background-color: #EAE9E1;
 }
