--- a/templates/documentary.html
+++ b/templates/documentary.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8">
   <meta name="generator" content="pandoc">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="assets/reveal.css">
+  <script src="/assets/highlight.min.js"></script>
   <link rel="stylesheet" href="assets/white.css">
-  <link rel="stylesheet" href="assets/zenburn.css">
   <link rel="stylesheet" href="assets/highlight.css">
   <link rel="stylesheet" href="assets/documentary.css">
 </head>
@@ -16,14 +15,8 @@
 $body$
     </div>
   </div>
-  <script src="assets/head.min.js"></script>
-  <script src="assets/reveal.js"></script>
   <script>
-    Reveal.initialize({
-      dependencies: [
-        { src: 'assets/highlight.min.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-      ]
-    });
+    hljs.initHighlightingOnLoad();
   </script>
 </body>
 </html>
