--- a/templates/documentary.html
+++ b/templates/documentary.html
@@ -4,36 +4,24 @@
   <meta charset="utf-8">
   <meta name="generator" content="pandoc">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="/assets/highlight.min.js"></script>
+
+  <!-- JS -->
+  <script src="assets/reveal.js"></script>
+  <script src="assets/head.min.js"></script>
+  <script src="assets/highlight.min.js"></script>
+
+  <!-- CSS -->
   <link rel="stylesheet" href="assets/highlight.css">
-
-  <!-- Extension CSS files go here. Remove or add as needed. -->
-  <link rel="stylesheet" media="screen" href="assets/deck.core.css">
-  <link rel="stylesheet" media="screen" href="assets/deck.navigation.css">
-  <link rel="stylesheet" media="screen" href="assets/horizontal-slide.css">
-  <!-- <link rel="stylesheet" media="screen" href="assets/deck.menu.css"> -->
-  <!-- <link rel="stylesheet" media="screen" href="assets/deck.goto.css"> -->
-  <!-- <link rel="stylesheet" media="screen" href="assets/deck.status.css"> -->
-  <!-- <link rel="stylesheet" media="screen" href="assets/deck.scale.css"> -->
-  <link rel="stylesheet" media="screen" href="assets/web-2.0.css">
-  <link rel="stylesheet" media="screen" href="assets/white.css">
-
-  <!-- Required JS files. -->
-  <script src="assets/jquery.min.js"></script>
-  <script src="assets/modernizr.custom.js"></script>
-  <script src="assets/deck.core.js"></script>
-  <script src="assets/deck.navigation.js"></script>
-  <!-- <script src="assets/deck.menu.js"></script> -->
-  <!-- <script src="assets/deck.goto.js"></script> -->
-  <!-- <script src="assets/deck.status.js"></script> -->
-  <!-- <script src="assets/deck.scale.js"></script> -->
-
+  <link rel="stylesheet" href="assets/reveal.css">
+  <link rel="stylesheet" href="assets/white.css">
   <link rel="stylesheet" href="assets/documentary.css">
 
 </head>
 <body>
-  <div class="deck-container">
+  <div class="reveal">
+    <div class="slides">
 $body$
+    </div>
   </div>
   <script src="/assets/documentary.js"></script>
 </body>
