--- a/templates/documentary.html
+++ b/templates/documentary.html
@@ -23,6 +23,6 @@
 $body$
     </div>
   </div>
-  <script src="/assets/documentary.js"></script>
+  <script src="assets/documentary.js"></script>
 </body>
 </html>
