--- a/docs/assets/documentary.css
+++ b/docs/assets/documentary.css
@@ -14,6 +14,10 @@ img {
   border: none !important;
 }
 
-.fragment:not(.visible) {
+.fragment.fade-up:not(.visible) {
+  display: none !important;
+}
+
+.fragment.fade-out.visible {
   display: none !important;
 }
